--- a/src/css-summoner/styles/builder.css
+++ b/src/css-summoner/styles/builder.css
@@ -353,6 +353,6 @@
 	}
 
 	.css-var-editor-toggle-desktop {
-		@apply bg-neutral-300/80 rounded-full shadow-lg px-3 py-2;
+		@apply bg-neutral-200/95 text-primary rounded-full shadow-lg px-3 py-2;
 	}
 }
