--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,6 +13,9 @@ import siteData from '@configs/siteData.json'
 			<p>
 				適切なクラスの組み合わせを確認し、生成したコードをコピーして実装に活用できます。
 			</p>
+			<p>
+				ついでにAstroドキュメントページ、Astroコンポーネント、型定義ファイルも生成します。
+			</p>
 		</div>
 
 		<div class='rounded-lg shadow-sm'>
