--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ import siteData from '@configs/siteData.json'
 				適切なクラスの組み合わせを確認し、生成したコードをコピーして実装に活用できます。
 			</p>
 			<p>
-				ついでにAstroドキュメントページ、Astroコンポーネント、型定義ファイルも生成します。
+				ついでに内部的にAstroドキュメントページ、Astroコンポーネント、型定義ファイルも生成してます。
 			</p>
 		</div>
 
